fix: categories filter dropdown stay behind table head

--- a/src/app/pages/product/list-product/list-product.css
+++ b/src/app/pages/product/list-product/list-product.css
@@ -160,6 +160,7 @@
   position: relative;
   width: auto;
   min-width: 200px;
+  z-index: 20;
 }
 
 .select-header {
@@ -224,7 +225,7 @@
   border-bottom-right-radius: 10px;
   max-height: 200px;
   overflow-y: auto;
-  z-index: 10;
+  z-index: 100;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
